Update min_beg.tex, min_ubeg.tex, and opti_loes2.tex

--- a/fig/tikz/min_ubeg.tex
+++ b/fig/tikz/min_ubeg.tex
@@ -10,7 +10,7 @@
 	\addplot[name path=b, domain={0:5}, color=myblue, style=very thick,samples=2]{2*x+10};
 	\addlegendentry{$2x_1-x_2 \leq -10$}
 	\addplot[name path=a, domain={0:15}, color=mygreen, style=very thick, samples=2]{x-7};
-	\addlegendentry{$x_1-x_2 \geq 7$}
+	\addlegendentry{$\phantom{.}x_1-x_2 \geq \phantom{....}7$}
 	\addplot[name path=c, domain={5:15}, color=white, style=very thick,samples=2]{20};
 	
 	\tikzfillbetween [of=a and b]{myblue!15}
