--- a/fig/tikz/optimering/opti_loes2.tex
+++ b/fig/tikz/optimering/opti_loes2.tex
@@ -17,7 +17,7 @@ ymax=4,
 %%%
 %%%
 \addplot[name path=b, domain={0:6}, color=myblue, style=very thick,samples=2]{4-x};
-\addlegendentry{$x_1+x_2 \leq 4$}
+\addlegendentry{$\phantom{..}x_1+x_2 \leq 4$}
 \addplot[name path=a, domain={0:6}, color=myred, style=very thick, samples=2]{3-0.5*x};
 \addlegendentry{$x_1+2x_2 \leq 6$}
 %%
