--- a/CSB/EPG2/incl/main/22.tex
+++ b/CSB/EPG2/incl/main/22.tex
@@ -23,6 +23,6 @@ Der bruges mere udregning til gengæld for at en reducering i skridtlængden øg
 % 
 %
 Hvis denne metode bruges på eksmplet som vist, så kommer $k_2$ og $k_3$ til at være identisk da den kun afhænger af første kordinaten, og svarer til midtpunktet. $k_1$ og $k_4$ kommer til at være endepunkterne hvis alt dette indsættes så opfylder det simpsons regel som er 
-$$\int_a^bf(x)dx \approx \frac{b-a}{6}(f(a)+4f(a+b)/2)+f(b)$$
+$$\int_a^bf(x)dx \approx \frac{b-a}{6}[f(a)+4f(a+b)/2)+f(b]$$
 
 %46:20 i CSB kursusgang 10
