Update a1_b35_g0.png, a1_b35_g5.png, and 14 more files...

--- a/CSB/EPG2/incl/main/2.tex
+++ b/CSB/EPG2/incl/main/2.tex
@@ -9,6 +9,6 @@ Derefter kommer nogle computer eksperimenter.
 \end{color}
 %
 \input{incl/main/21}
-%\input{incl/main/21b}
+\input{incl/main/111}
 \input{incl/main/22}
 \input{incl/main/23}
