Update julieerdejlig.tex, julieerdejligmidt.tex, and 4 more files...

--- a/CSB/EPG2/fig/tikz/modi.tex
+++ b/CSB/EPG2/fig/tikz/modi.tex
@@ -28,7 +28,7 @@
 %
 \draw[thick](0.1,0.18) -- (0.1,0.22); % (a)
 \draw[thick](0.7,0.18) -- (0.7,0.22); % (b)
-\draw[thick](0.4,0.18) -- (0.4,0.22); % (m_1)
+%\draw[thick](0.4,0.18) -- (0.4,0.22); % (m_1)
 %  \draw[thick](0.55,0.23) -- (0.55,0.27); % (m_2)
 %  \draw[thick](0.475,0.23) -- (0.475,0.27); % (m_3)
 %
@@ -40,7 +40,7 @@
 %
 \node at (0.1,0.12) (){$x_0$};
 \node at (0.7,0.12) (){$x_1$};
-\node at (0.39,0.12) (){$x_0 + \frac{h}{2}$};
+%\node at (0.39,0.12) (){$x_0 + \frac{h}{2}$};
 %
 %\node at (0.55,0.3) (){$m_2$};
 %\node at (0.475,0.3) (){$m_3$};
@@ -73,7 +73,7 @@
 %
 \draw[thick](0.1,0.18) -- (0.1,0.22); % (a)
 \draw[thick](0.7,0.18) -- (0.7,0.22); % (b)
-\draw[thick](0.4,0.18) -- (0.4,0.22); % (m_1)
+%\draw[thick](0.4,0.18) -- (0.4,0.22); % (m_1)
 %  \draw[thick](0.55,0.23) -- (0.55,0.27); % (m_2)
 %  \draw[thick](0.475,0.23) -- (0.475,0.27); % (m_3)
 %
@@ -85,7 +85,7 @@
 %
 \node at (0.1,0.12) (){$x_0$};
 \node at (0.7,0.12) (){$x_1$};
-\node at (0.39,0.12) (){$x_0 + \frac{h}{2}$};
+%\node at (0.39,0.12) (){$x_0 + \frac{h}{2}$};
 %
 %\node at (0.55,0.3) (){$m_2$};
 %\node at (0.475,0.3) (){$m_3$};
