--- a/CSB/EPG2/incl/main/11.tex
+++ b/CSB/EPG2/incl/main/11.tex
@@ -9,5 +9,9 @@ fisk
 \\\\
 % 
 %
-\input{fig/tikz/julieerdejlig}
+\input{fig/tikz/julieerdejligmidt}
+%
+\input{fig/tikz/julieerdejligtrapez}
+%
+\input{fig/tikz/julieerdejligsimpsons}
 %
