Update 23.tex and 23b.tex

--- a/CSB/EPG2/incl/main/23.tex
+++ b/CSB/EPG2/incl/main/23.tex
@@ -7,29 +7,8 @@ fisk
 % 
 \end{color}
 \\\\
-% 
-Stigning i $\alpha$. 
-Flere smittede - Stiger kurven 
-Hvor hurtigt folk der kan smittes bliver smittes 
-
-Stigning i $\beta$. 
-Så der ikke så mange syge 
-Kurven til at falde 
-Hvor hurtigt folk bliver raske igen
-
-Ændring i gamma 
-Gamme = vaccine 
-Sort falder hurtigere 
-og den røde falder hurtigere
-Hvor mange der er syge falder og hvor mange der kan blive syge falder 
-
-
-Begyndelsesværdi: 
-
-$x_2$ antal syge 
-Stigning så topper kurven hurtigere
- 
-$x_1$ Kan blive syge 
-Fald så bliver kurven ikke så høj 
-
 %
+\input{incl/main/23a}
+\input{incl/main/23b}
+\input{incl/main/23c}
+\input{incl/main/23d} 
