--- a/CSB/EPG2/incl/main/23b.tex
+++ b/CSB/EPG2/incl/main/23b.tex
@@ -9,3 +9,28 @@ fisk
 \\\\
 % 
 %
+Stigning i $\alpha$. 
+Flere smittede - Stiger kurven 
+Hvor hurtigt folk der kan smittes bliver smittes 
+
+Stigning i $\beta$. 
+Så der ikke så mange syge 
+Kurven til at falde 
+Hvor hurtigt folk bliver raske igen
+
+Ændring i gamma 
+Gamme = vaccine 
+Sort falder hurtigere 
+og den røde falder hurtigere
+Hvor mange der er syge falder og hvor mange der kan blive syge falder 
+
+
+Begyndelsesværdi: 
+
+$x_2$ antal syge 
+Stigning så topper kurven hurtigere
+ 
+$x_1$ Kan blive syge 
+Fald så bliver kurven ikke så høj 
+
+%
