--- a/CSB/EPG2/incl/main/23a.tex
+++ b/CSB/EPG2/incl/main/23a.tex
@@ -3,9 +3,10 @@
 %
 \begin{color}{AAUblue2}
 %
-fisk
+Implementér Euler metoden og Runge-Kutta RK4 metoden for vektorfunktioner. 
 % 
 \end{color}
 \\\\
 % 
+Se \textsc{vedikkehvaddenhedder.py}.
 %
