--- a/CSB/EPG2/incl/main/21b.tex
+++ b/CSB/EPG2/incl/main/21b.tex
@@ -1,2 +1,15 @@
 % God arbejdslyst xD
 %
+\subsection*{Euler metode og trapezmetoden}
+%
+Det vises nu, at modificeret Euler metode anvendt på
+\begin{align*}
+\frac{dy}{dx}=f(x),\phantom{hi}y(a)=y_0
+\end{align*}
+%
+giver samme resultat, som trapezmetoden anvendt på
+%
+\begin{align*}
+y_0 + \int_a^b f(x) dx.
+\end{align*}
+%
