Update konveks_eks_r2.tex, konveks_eks_r3.tex, and 3 more files...

--- a/fig/tikz/geometri/konveks_eks_r2.tex
+++ b/fig/tikz/geometri/konveks_eks_r2.tex
@@ -36,7 +36,7 @@
 %%
 %
 \end{tikzpicture}
-  \captionof{figure}{Vektorerne $\mathbf{u}$ og $ \mathbf{v}$, samt den konvekse kombination af dem, hvor $\lambda_{\textbf{u}} = \lambda_{\textbf{v}} = \frac{1}{2}$, og det konvekse hylster af vektorerne, der er markeret med blå.}
+  \captionof{figure}{Vektorerne $\mathbf{u}$ og $ \mathbf{v}$, samt den konvekse kombination af dem, hvor $\lambda_{\textbf{u}} = \lambda_{\textbf{v}} = \frac{1}{2}$, og det konvekse hylster af vektorerne, markeret med blå.}
   \label{fig:neej2}
 \end{center}
 %
