--- a/fig/tikz/geometri/konveks_eks_r3.tex
+++ b/fig/tikz/geometri/konveks_eks_r3.tex
@@ -31,9 +31,9 @@
 % -------------------------------------------------------
 \filldraw [fill=myblue,opacity=0.3] 
          (b) -- (c) -- (1.7,1.2,1.6) -- cycle;
-\filldraw [fill=myblue,opacity=0.3] 
+%\filldraw [fill=myblue,opacity=0.3] 
          (b) -- (1.7,1.2,1.6) -- (f);
-\filldraw [fill=myblue,opacity=0.3] 
+%\filldraw [fill=myblue,opacity=0.3] 
          (c) -- (1.7,1.2,1.6) -- (f)--(c);
 %
 %
@@ -48,7 +48,7 @@
 %
 %
 \end{tikzpicture}
-  \captionof{figure}{Vektorerne $\mathbf{u}$, $ \mathbf{v}$ og $ \mathbf{w}$ i $\R^3$, og det konvekse hylster af vektorerne, der er markeret med blå.}
+  \captionof{figure}{Vektorerne $\mathbf{u}$, $ \mathbf{v}$ og $ \mathbf{w}$ i $\R^3$, og det konvekse hylster af vektorerne, markeret med blå.}
   \label{fig:neeej}
 \end{center}
 %
