--- a/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
+++ b/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
@@ -29,9 +29,9 @@ $
 $
 \end{center}
 %
-\textit{Polygonerne} er begrænsningerne, som afgrænser polyederet fra resten af rummet. 
-\textcolor{red}{Dermed er polygonet på figur \ref{fig:nej2} linjerne, der afgrænser $\mathcal{P}$ fra resten af $\R^2$.}
-Polygonet på figur \ref{fig:nej3} er derimod udsnittet af fladerne, som udgør kuben, der afgrænser $\mathcal{P}$ fra resten af $\R^3$.
+\textit{Randen} er begrænsningerne, som afgrænser polyederet fra resten af rummet. 
+Dermed er randen på figur \ref{fig:nej2} linjerne, der afgrænser $\mathcal{P}$ fra resten af $\R^2$.
+Randen på figur \ref{fig:nej3} er derimod udsnittet af fladerne, som udgør kuben, der afgrænser $\mathcal{P}$ fra resten af $\R^3$.
 \\\\
 %
 Det gælder endvidere for polyedre, at de enten kan være \textit{begrænsede} eller \textit{ubegrænsede}.
@@ -76,7 +76,7 @@ Ligeledes ses et hyperplan i $\R^3$ på figur \ref{fig:nej6}, der afskærer det 
 \input{fig/tikz/geometri/hyperplan_r3}
 %
 Betragt polyederet $\mathcal{P}$ på figur \ref{fig:nej2}. 
-\textcolor{red}{Polygonen består af fire hyperplaner.}
+Randen består af fire hyperplaner.
 Fællesmængden for de øvre halvrum udgør polyederet.
 På figur \ref{fig:nej5} er de fire hyperplaner markeret. 
 %
@@ -86,7 +86,7 @@ På figur \ref{fig:nej5} er de fire hyperplaner markeret.
 %
 \input{fig/tikz/geometri/hyperplan_eks}
 %
-\textcolor{red}{Hyperplanerne på figur \ref{fig:nej3} danner dermed polygonen, og fællesmængden for det øvre halvrum udgør polyederet.}
+Hyperplanerne på figur \ref{fig:nej3} danner dermed randen, og fællesmængden for det øvre halvrum udgør polyederet.
 \\\\
 %
 %
