--- a/incl/main/linear_algebra/span/under_bas_dim.tex
+++ b/incl/main/linear_algebra/span/under_bas_dim.tex
@@ -14,6 +14,7 @@ En mængde $W$, bestående af vektorer i $\R^n$, er et \textbf{underrum} af $\R^
 Mængden $\R^n$ er et underrum til sig selv, da summen af to vilkårlige vektorer i $\R^n$ tilhører $\R^n$.
 Enhver vektor multipliceret med en skalar er i $\R^n$, og $\textbf{0}$ er ligeledes i $\R^n$. 
 Mængden $\{\textbf{0}\}$ er ligeså et underrum til $\R^n$, kaldet \textit{nul-underrummet}.
+Såfremt mængden ikke dækker hele rummet er mængden et \textit{ægte underrum}.
 %
 %
 \begin{thm}{}{}
