--- a/incl/main/simplex_metoden/simplex_metoden_intro.tex
+++ b/incl/main/simplex_metoden/simplex_metoden_intro.tex
@@ -46,7 +46,9 @@ Disse betingelser danner følgende optimeringsproblemet:
 \end{align*}
 %
 \end{eks}
-
+% 
+Dualproblemet til \ref{haribooooo} vil istedet minimere indholdet af sukker og kulhydrater begrænset af forholdet mellem to typer slik i en slikpose.
+%
 \subsubsection{1. Opskriv optimeringsproblemet på standardform med slack-variabler.}
 %
 Generelt tager simplexmodellen udgangspunkt i, at alle variablerne er positive. Jævnfør afsnit \ref{sec:standard} tilføjes $x_i^+$ og $x_i^-$, hvis der i optimeringsproblemet ikke er ikke-negativitetsbetingelser for variablerne. 
