--- a/CSB/EPG2/incl/main/23c.tex
+++ b/CSB/EPG2/incl/main/23c.tex
@@ -1,2 +1,3 @@
 \subsection*{(c)}
 %
+Værdien gamma forøger hvor hurtigt befolkningen bliver immun uden at have været smittet. Jo højere værdi af gamma jo hurtigere bliver befolkningen immun, og det maksimale antal der er smittet på en gang falder også.
