Update alg_hjorne.tex, eksistens.tex, and 14 more files...

--- a/incl/main/grafisk_losning/alg_hjorne.tex
+++ b/incl/main/grafisk_losning/alg_hjorne.tex
@@ -11,6 +11,10 @@ Punktet $\textbf{u}$ har tre aktive betingelser $x_1 + x_2 + x_3 = 1$, $x_1=0$ o
 \\\\
 %
 \ref{thm:betingi} giver anledning til, at disse bindende betingelser kan føres i relation til løsninger af lineære optimeringsproblemer.
+\\\\
+\phantom{Hej}
+\\\\
+%
 %
 \begin{thm}{}{betingi}
 Lad $\textbf{x}$ være et element i $\R^n$ og lad $I=\{i \mid \textbf{a}^T_i\textbf{x}=b_i\}$ være en mængde af indekser på betingelser, der er bindende ved $\textbf{x}$.
