--- a/incl/main/grafisk_losning/eksistens.tex
+++ b/incl/main/grafisk_losning/eksistens.tex
@@ -21,6 +21,8 @@ Så er følgende udsagn ækvivalente.
 \end{enumerate}
 \end{thm}
 %
+\newpage
+%
 \begin{proof}
 Lad $\textbf{x}$ være et element i $\mathcal{P}$ og lad $I = \{ i \mid \textbf{a}_i^T\textbf{x} = b_i \}$.
 Hvis $n$ af vektorerne  $\textbf{a}_i, i \in I$, svarende til de bindende betingelser, er lineært uafhængige, så er $\textbf{x}$ en basal mulig løsning, og der eksisterer et ekstremumspunkt.
