--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -87,6 +87,9 @@ x_1
 = \mathbf{0}
 \end{align*}
 %
+\newpage
+\noindent
+%
 være opfyldt, hvis $x_1=x_2=0$ eller $x_1=-2$ og $x_2=1$. 
 Vektorerne i $\S_2$ er derfor lineært afhængige, fordi der er flere løsninger end den trivielle.
 %
@@ -475,6 +478,9 @@ Givet
 \end{bmatrix}
 \right\},
 \end{align*}
+% 
+\newpage
+\noindent
 %
 opstilles koefficientmatricen, som omdannes til reduceret trappeform. 
 %
