--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
@@ -192,6 +192,8 @@ Følgende udsagn er ækvivalente:
 %
 \end{thm}
 %
+\newpage
+%
 \begin{proof}
 %
 Lad $A$ være en $m \times n$ matrix og $\mathbf{b} \in \R^m$. Jævnfør \ref{defn:mvp} følger det, at der eksisterer en vektor 
