--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
@@ -1,3 +1,4 @@
+\newpage
 \section{Løsning til lineære ligningssystemer}
 %
 Disse ligningssystemer kan løses ved hjælp af forskellige operationer,
@@ -136,6 +137,9 @@ Hvis der foretages en ombytning på række to og tre, da vil matrix $B$ ligelede
 %
 \end{eks}
 %
+\newpage
+\noindent
+%
 Matricer kan yderligere reduceres til \textit{reduceret trappeform}.
 %
 \begin{defn}{}{redtrap}
@@ -180,7 +184,9 @@ Metoden til at gøre dette ses i afsnit \ref{gauss}.
 \end{defn}
 \noindent
 %
-\begin{eks}\label{eks:pivot}
+\newpage
+\begin{eks}
+\label{eks:pivot}
 Betragt matrix $A$ fra \ref{eks:trappe}. Pivotindgangene i $A$ er her markeret med blåt.
 %
 \begin{align*}
