--- a/incl/main/linear_algebra/matricer_vektorer/mxmulti.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxmulti.tex
@@ -114,6 +114,9 @@ $$
 \end{eks}
 Da matricen $B$ inddeles i søjlevektorer, er grundprincippet i matrixmultiplikation at finde matrix-vektorprodukter.
 En række egenskaber gælder for matrixmultiplikation, hvilket er summeret i \ref{thm:mxmulti}.
+\\\\
+%
+\newpage
 %
 \begin{thm}{}{mxmulti}
 Lad $A$ og $B$ være $k \times m$ matricer, $C$ være en $m \times n$ matrix, og $P$ og $Q$ være $n \times p$ matricer. Følgende udsagn er dermed sande:
