--- a/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
@@ -56,6 +56,9 @@ A^T =
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
+\newpage
+\noindent
+%
 \ref{thm:mxtranspo} viser, at transponering bevarer summering og skalering af matricer.
 %
 \begin{thm}{}{mxtranspo}
