--- a/incl/main/linear_optimeringsproblemer/dualitet.tex
+++ b/incl/main/linear_optimeringsproblemer/dualitet.tex
@@ -1,3 +1,4 @@
+\newpage
 \section{Dualitet}
 % Vi kan vælge at tage det med lagrange multiplier med også men tænker vi snakker om det jeg er personligt i tvivl og ville nødigt spilde tiden på det.
 	% - Julie: Jeg synes ikke vi skal have det med 
@@ -126,6 +127,8 @@ Det gælder endvidere, at der fra dualproblemet kan vendes tilbage til det oprin
 \begin{thm}{}{dualitetsaet}
 Hvis dualproblemet omdannes til et ækvivalent minimumsproblem og dualproblemet af minimumsproblemet dannes, opnås primærproblemet.
 \end{thm}
+%
+\newpage
 %
 \begin{proof}
 Betragt problemet
