--- a/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
+++ b/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
@@ -109,6 +109,16 @@ Dette medfører, at der findes uendeligt mange optimale løsninger til maksimums
 På figur \ref{fig:opti_loes2} introduceres et eksempel, hvor der findes et uendeligt antal løsninger, der
 maksimerer værdien af objektfunktionen. 
 %
+\newline
+\phantom{Hej}
+\\\\
+\phantom{Hej}
+\\\\
+\phantom{Hej}
+\\\\
+\phantom{Hej}
+\\\\
+%
 \input{fig/tikz/optimering/opti_loes2}
 %
 \noindent
@@ -126,6 +136,13 @@ Dette scenarie er illustreret på figur \ref{fig:opti_loes4}.
 Dette betyder, at betingelserne ikke begrænser, hvor stor
 værdien af objektfunktionen kan blive. 
 Derfor er den optimale løsning $\infty$.
+%
+\phantom{Hej}
+\\\\
+\phantom{Hej}
+\\\\
+\phantom{Hej}
+\\\\
 %
 \input{fig/tikz/optimering/opti_loes4}
 %
