--- a/fig/tikz/geometri/hjorne.tex
+++ b/fig/tikz/geometri/hjorne.tex
@@ -27,9 +27,9 @@
 %	
 % Punkter og tilhørende tekst
 % -------------------------------------------------------
-	\filldraw [black] (5,2) circle (0pt) node[right] {$ \{ \mathbf{y} \text{  } | \text{  } \mathbf{c}^T \mathbf{y} = \mathbf{c}^T \mathbf{x} \}$};
+	\filldraw [black] (5,2) circle (0pt) node[right] {$ \{ \mathbf{y} \mid \mathbf{c}^T \mathbf{y} = \mathbf{c}^T \mathbf{x} \}$};
 	\filldraw [black] (x) circle (2pt) node[above] {$\mathbf{x}$};
-	\filldraw [black] (-3,3.8) circle (0pt) node[left] {$ \{ \mathbf{y} \text{  } | \text{  } \mathbf{c}^T \mathbf{y} = \mathbf{c}^T \mathbf{w} \}$};
+	\filldraw [black] (-3,3.8) circle (0pt) node[left] {$ \{ \mathbf{y} \mid \mathbf{c}^T \mathbf{y} = \mathbf{c}^T \mathbf{w} \}$};
 	\filldraw [black] (w) circle (2pt) node[left] {$\mathbf{w}$};
 %
 % Streger mellem punkterne 
