--- a/incl/main/grafisk_losning/eksistens.tex
+++ b/incl/main/grafisk_losning/eksistens.tex
@@ -55,7 +55,7 @@ Dette giver en modstrid og derfor må (c) $\rightarrow$ (b).
 \end{proof}\\
 %
 Bemærk, at begrænsede polyedre ikke indeholder en uendelig linje.
-Ligeledes indeholder den positive kvadrant $\{ \textbf{x} \mid \textbf{x} \geq \textbf{0}\}$ ikke uendelige linjer og da polyeder på standardform befinder sig i den positive kvadrant, indeholder disse heller ikke uendelige linjer.
+Ligeledes indeholder den positive kvadrant $\{ \textbf{x} \mid \textbf{x} \geq \textbf{0}\}$ ikke uendelige linjer og da polyedre på standardform befinder sig i den positive kvadrant, indeholder disse heller ikke uendelige linjer.
 %
 \begin{kor}{}{}
 Ethvert begrænset ikke-tomt polyeder og ethvert ikke-tomt polyeder på standardform har mindst én basal mulig løsning.
