--- a/incl/main/grafisk_losning/poly_std_form.tex
+++ b/incl/main/grafisk_losning/poly_std_form.tex
@@ -1,8 +1,8 @@
-\section{Polyeder på standardform}
+\section{Polyedre på standardform}
 \label{afsnit:fisk}
 %
 Som beskrevet i afsnit \ref{sec:standard}, kan optimeringsproblemer opskrives på standardform.
-Dette korresponderer med polyeder, der ligeledes kan opskrives på standardform: 
+Dette korresponderer med polyedre, der ligeledes kan opskrives på standardform: 
 $\mathcal{P}=\{ \mathbf{x} \in \R^n  \mid  A\mathbf{x}=\mathbf{b}, \mathbf{x} \geq \mathbf{0} \}$, hvor er $A$ er en $m \times n$ matrix.
 $\mathcal{P}$ er her et \textit{polyeder på standardform}.
 I de fleste tilfælde er det en fordel at antage, at de $m$ rækker i $A$ er lineært uafhængige.
