--- a/incl/main/konklu_perspek/konklusion.tex
+++ b/incl/main/konklu_perspek/konklusion.tex
@@ -1,5 +1,5 @@
 \chapter{Konklusion}
 % Ved ikke om den skal hedde dette?
 Ud fra arbejdet med lineære programeringsproblemer kan det konkluderes at disse kan repræsenteres geometrisk gennem polyedre, som er geometriske figruer der afgrænser de mulige løsninger af et lineært optimeringsproblem.
-Endvidere kan det konkluderes at lineære programeringsproblemer har en optimal løsning, og at disse vil findes i hjørnerne af et polyedre.
-En måde at finde den optimale løsning på er igennem udførelsen af simplexalgoritmen som ved hjælp af elementære rækkeopperationer på problemerne opstillet som en matrice herigennem afsøger hjørnerne af et polyedre, og derved finder den optimale løsning.
+Endvidere kan det konkluderes at lineære programeringsproblemer har en optimal løsning, og at disse vil findes i hjørnerne af et polyeder.
+En måde at finde den optimale løsning på er igennem udførelsen af simplexalgoritmen som ved hjælp af elementære rækkeopperationer på problemerne opstillet som en matrice herigennem afsøger hjørnerne af et polyeder, og derved finder den optimale løsning.
